--- a/app/assets/stylesheets/golfcourses.scss
+++ b/app/assets/stylesheets/golfcourses.scss
@@ -52,6 +52,11 @@
             padding: 10px;
             margin-bottom: 10px;
         }
+        .search_result__setsumei {
+            font-size: 18px;
+            font-weight: bold;
+            color: blue;
+        }
         .search_result {
             .search_result__name {
                 display: inline;
