--- a/app/views/plays/edit.html.erb
+++ b/app/views/plays/edit.html.erb
@@ -10,8 +10,8 @@
     <%= render "form" %>
   <div class="play-edit__buttonGroup">
     <button id="boggy" class="play-edit__scoreButton score_over">Boggy</button>
-    <button id="double_boggy" class="play-edit__scoreButton score_over">Double-Boggy</button>
-    <button id="triple_boggy" class="play-edit__scoreButton score_over">Triple-Boggy</button>
+    <button id="double_boggy" class="play-edit__scoreButton score_over">Double<br>Boggy</button>
+    <button id="triple_boggy" class="play-edit__scoreButton score_over">Triple<br>Boggy</button>
   </div>
-  <p><%= link_to "スコアカードを見る", score_path(id: @score.id) ,hole_number: params[:hole_number] %></p>
+  <p class="play-edit__showScorecard"><i class="fas fa-golf-ball"></i><%= link_to "スコアカード、リーダーボードを見る", score_path(id: @score.id) ,hole_number: params[:hole_number] %></p>
 </div>
