--- a/app/assets/stylesheets/score.scss
+++ b/app/assets/stylesheets/score.scss
@@ -35,6 +35,7 @@
     .score-block__date-content {
         font-size: 20px;
         display: block;
+        word-break: break-word;
     }
     .score-block__date-like {
         text-align: right;
