--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -104,3 +104,30 @@
         text-align: center;
     }
 }
+
+.followUser-block {
+    display: block;
+    width: 700px;
+    margin: 0 auto;
+    .avatar-img {}
+    .followUser-block__list {
+        display: flex;
+        justify-content: center;
+        border-bottom: 1px solid;
+        padding: 10px;
+    }
+    .followUser-block__ul {
+        margin: 10px auto;
+        padding: 0;
+    }
+    .followUser-block__list__span {
+        width: 300px;
+        text-align: center;
+    }
+    .followUser-block__list__name {
+        height: 50px;
+        line-height: 50px;
+        width: 300px;
+        text-align: center;
+    }
+}
