--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,4 @@
-/*
+    /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
  *
@@ -13,121 +13,169 @@
  *= require_tree .
  *= require_self
  */
-
-@import "bootstrap";
-@import url('https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap');
-a:hover {
-    text-decoration: none;
-    font-style: italic;
-    font-weight: 800;
-}
-
-li {
-    list-style: none;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    text-align: center;
-}
-
-input[type="file"] {
-    -webkit-appearance: none;
-    border-radius: 0;
-}
-
-nav {
-    display: flex;
-    justify-content: center;
-}
-
-.leader-board__thead {
-    display: block;
-}
-
-.leader-board__tbody {
-    display: block;
-    overflow-y: scroll;
-    height: 430px;
-}
-
-.leader-board__rank {
-    min-width: 60px;
-}
-
-.leader-board__player {
-    min-width: 155px;
-}
-
-.leader-board__score {
-    min-width: 75px;
-}
-
-.leader-board__thru {
-    min-width: 57px;
-}
-
-.headerBlock__avatar {
-    width: 300px;
-    margin-top: 10px;
-}
-
-.headerBlock__avatar:hover {
-    opacity: 0.5;
-}
-
-.avatar-img {
-    width: 40px;
-    height: 40px;
-    object-fit: cover;
-    border-radius: 50%;
-    padding: 0;
-    float: right;
-    margin: 10px 50px 0px 0px;
-}
-
-.avatar-img:hover {
-    opacity: 0.5;
-}
-
-.footer-block {
-    width: 100%;
-    height: 100px;
-    line-height: 100px;
-    text-align: center;
-    font-size: 20px;
-    background-color: rgba(255, 255, 255, 0.5);
-    margin-top: 50px;
-}
-
-body {
-    font-family: 'Kosugi Maru', sans-serif;
-    color: #555555;
-    background-image: image-url('shiba.jpg');
-    // background-repeat: repeat-x;
-    background-size: cover;
-    display: flex;
-    flex-flow: column;
-    min-height: 100vh;
-}
-
-.thmb {
-    //いずれ消す
-    width: 200px;
-    display: block;
-    margin: 10px auto;
-}
-
-.flex-1 {
-    flex: 1;
-}
-
-.commmon__pagenate {
-    margin: 0 auto;
-    display: flex;
-    justify-content: center;
-}
+    
+    @import "bootstrap";
+    @import url('https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap');
+    a:hover {
+        text-decoration: none;
+        font-style: italic;
+        font-weight: 800;
+    }
+    
+    li {
+        list-style: none;
+    }
+    
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+        text-align: center;
+    }
+    
+    p {
+        word-break: break-all;
+    }
+    
+    input[type="file"] {
+        -webkit-appearance: none;
+        border-radius: 0;
+    }
+    
+    nav {
+        display: flex;
+        justify-content: center;
+    }
+    
+    .leader-board__thead {
+        display: block;
+    }
+    
+    .leader-board__tbody {
+        display: block;
+        overflow-y: scroll;
+        height: 430px;
+    }
+    
+    .leader-board__rank {
+        min-width: 60px;
+    }
+    
+    .leader-board__player {
+        min-width: 155px;
+    }
+    
+    .leader-board__score {
+        min-width: 75px;
+    }
+    
+    .leader-board__thru {
+        min-width: 57px;
+    }
+    
+    .headerBlock__avatar {
+        width: 300px;
+        margin-top: 10px;
+    }
+    
+    .headerBlock__avatar:hover {
+        opacity: 0.5;
+    }
+    
+    .avatar-img {
+        width: 40px;
+        height: 40px;
+        object-fit: cover;
+        border-radius: 50%;
+        padding: 0;
+        float: right;
+        margin: 10px 50px 0px 0px;
+    }
+    
+    .avatar-img:hover {
+        opacity: 0.5;
+    }
+    
+    .footer-block {
+        width: 100%;
+        height: 100px;
+        line-height: 100px;
+        text-align: center;
+        font-size: 20px;
+        background-color: rgba(255, 255, 255, 0.5);
+        margin-top: 50px;
+    }
+    
+    body {
+        font-family: 'Kosugi Maru', sans-serif;
+        color: #555555;
+        background-image: image-url('shiba.jpg');
+        // background-repeat: repeat-x;
+        background-size: cover;
+        display: flex;
+        flex-flow: column;
+        min-height: 100vh;
+    }
+    
+    .thmb {
+        //いずれ消す
+        width: 200px;
+        display: block;
+        margin: 10px auto;
+    }
+    
+    .flex-1 {
+        flex: 1;
+    }
+    
+    .commmon__pagenate {
+        margin: 0 auto;
+        display: flex;
+        justify-content: center;
+    }
+    
+    @media(max-width: 700px) {
+        h1 {
+            font-size: 5vw;
+        }
+        .headerBlock {
+            margin-bottom: 10px;
+            .avatar-img {
+                margin-right: 0;
+            }
+            .topMenu-image__avatar {
+                width: 200px;
+            }
+        }
+        .footer-block {
+            font-size: 3vw;
+            height: 50px;
+            line-height: 50px;
+            margin-top: 0;
+        }
+        h2 {
+            font-size: 8vw;
+        }
+    }
+    
+    @media(max-width: 550px) {
+        .headerBlock {
+            .headerBlock__avatar {
+                width: 200px;
+            }
+        }
+    }
+    
+    @media(max-width: 400px) {
+        .headerBlock {
+            .headerBlock__avatar {
+                width: 150px;
+            }
+            .avatar-img {
+                width: 20px;
+                height: 20px;
+            }
+        }
+    }
