--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -80,6 +80,18 @@
                 .table {
                     font-size: 3vw;
                 }
+                .newsList__image {
+                    margin: 15px;
+                    width: 50px;
+                }
+                .title_group {
+                    h4 {
+                        font-size: 6vw;
+                    }
+                    p {
+                        font-size: 4vw;
+                    }
+                }
             }
             .topMenu-list {
                 align-content: flex-start;
