--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -84,6 +84,9 @@
                     margin: 15px;
                     width: 50px;
                 }
+                th {
+                    white-space: nowrap;
+                }
                 .title_group {
                     h4 {
                         font-size: 6vw;
