--- a/app/views/home/_playing_round.html.erb
+++ b/app/views/home/_playing_round.html.erb
@@ -16,7 +16,7 @@
           <tr>
             <th>プレイ日</th>
             <th>コース名</th>
-            <th>暫定<br>スコア</th>
+            <th>スコア</th>
             <th>THRU</th>
           </tr>
           <% @unfinished_score.each do|score| %>
