--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,5 +1,5 @@
 <div class="message-index-block">
-  <h1>掲示板</h1>
+  <h1>各ゴルフ場の掲示板</h1>
   <p>コースごとの口コミや情報が見られます。</p>
   <p>※メッセージはラウンド画面でしか投稿できません。</p>
   <ul>
