--- a/app/views/messages/index_course.html.erb
+++ b/app/views/messages/index_course.html.erb
@@ -20,5 +20,5 @@
 			<% end %>
 		</p>
 	<%= paginate @messages %>
-	<%= link_to "メッセージ一覧にもどる", messages_index_path %>
+	<%= link_to "メッセージ一覧にもどる", messages_index_path, class: "messageCourse-block__backIndex" %>
 </div>
