--- a/app/assets/stylesheets/message.scss
+++ b/app/assets/stylesheets/message.scss
@@ -136,3 +136,56 @@
         text-align: center;
     }
 }
+
+@media(max-width: 700px) {
+    .message-index-block {
+        width: auto;
+        p {
+            font-size: 3vw;
+            margin-bottom: 0px;
+        }
+        .message-index-block__list a {
+            font-size: 15px;
+        }
+        .message-index-block__list p {
+            font-size: 12px;
+        }
+        .message-index-block__list {
+            height: 60px;
+            margin-bottom: 0px;
+        }
+        .pagination {
+            font-size: 12px;
+        }
+        .pagination li a {
+            height: 41px;
+            width: 35px;
+            font-size: 12px;
+            text-align: center;
+            padding: 0;
+            line-height: 20px;
+        }
+    }
+    .messageCourse-block {
+        width: auto;
+        .messageCourse-block__img {
+            width: 25px;
+            height: 25px;
+        }
+        .pagination {
+            font-size: 12px;
+        }
+        .pagination li a {
+            height: 41px;
+            width: 35px;
+            font-size: 12px;
+            text-align: center;
+            padding: 0;
+            line-height: 20px;
+        }
+        .messageCourse-block__backIndex {
+            display: block;
+            text-align: center;
+        }
+    }
+}
