--- a/app/views/archives/index.html.erb
+++ b/app/views/archives/index.html.erb
@@ -53,7 +53,7 @@
       <tr class="archive-block__round__tr">
 
         <td><%= score.played_date %></td>
-        <td><%= score.golfcourse.golfcoursename %></td>
+        <td><%= score.golfcourse.golfcourseabbr %></td>
         <td><%= link_to score.total_score, archives_show_path(id: score.id)%>
         <td><%= score.start_hole %>H</td>
         <% if score.published == 1 %>
