--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -119,6 +119,10 @@
         min-height: 100vh;
     }
     
+    table {
+        text-align: center;
+    }
+    
     .thmb {
         //いずれ消す
         width: 200px;
@@ -138,7 +142,7 @@
     
     @media(max-width: 700px) {
         h1 {
-            font-size: 5vw;
+            font-size: 7vw;
         }
         .headerBlock {
             margin-bottom: 10px;
