--- a/app/views/archives/show.html.erb
+++ b/app/views/archives/show.html.erb
@@ -8,17 +8,18 @@
     <%= render 'scores/leader_board' %>
   </div>
   <% if current_user.id == @score.user.id %>
-    <%= link_to "ラウンド一覧に戻る", archives_index_path %> <br>
+    <%= link_to "ラウンド一覧に戻る", archives_index_path %> 
   <% end %>
+  <div class="archiveShow-block__linkGroup">
+    <% if current_user.id == @score.user.id && @score.published == 1 %>
+      <%= link_to "このラウンドのスコアを非公開にする", unpublished_path(score_id: params[:id]), method: :patch, data: { confirm: 'このラウンドの結果を非公開にしてよろしいですか？' }  %> 
+    <% elsif current_user.id == @score.user.id && @score.published == 0 %>
+      <%= link_to "このラウンドのスコアを公開する", published_path(id: params[:id]), method: :patch, data: { confirm: 'このラウンドの結果を公開してよろしいですか？' } %> 
+    <% end %>
 
-  <% if current_user.id == @score.user.id && @score.published == 1 %>
-    <span><%= link_to "このラウンドのスコアを非公開にする", unpublished_path(score_id: params[:id]), method: :patch, data: { confirm: 'このラウンドの結果を非公開にしてよろしいですか？' }  %> </span><br>
-  <% elsif current_user.id == @score.user.id && @score.published == 0 %>
-    <span><%= link_to "このラウンドのスコアを公開する", published_path(id: params[:id]), method: :patch, data: { confirm: 'このラウンドの結果を公開してよろしいですか？' } %> </span><br>
-  <% end %>
-
-  <% if  current_user.id == @score.user.id %>
-    <span><%= link_to "このラウンドのスコアを編集する", archives_edit_path %> </span><br>
-    <span><%= link_to "このラウンドのスコアを削除する", archives_destroy_path, method: :delete, data: { confirm: '本当に削除してよろしいですか？' } %> </span><br>
-  <% end %>
+    <% if  current_user.id == @score.user.id %>
+      <%= link_to "このラウンドのスコアを編集する", archives_edit_path %>
+      <%= link_to "このラウンドのスコアを削除する", archives_destroy_path, method: :delete, data: { confirm: '本当に削除してよろしいですか？' } %>
+    <% end %>
+  </div>
 </div>
