--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -109,7 +109,6 @@
     display: block;
     width: 700px;
     margin: 0 auto;
-    .avatar-img {}
     .followUser-block__list {
         display: flex;
         justify-content: center;
@@ -129,5 +128,87 @@
         line-height: 50px;
         width: 300px;
         text-align: center;
+    }
+}
+
+.user-devise-block {
+    display: block;
+    width: 350px;
+    margin: 0 auto;
+    .user-devise-block__label {
+        display: block;
+        margin-top: 15px;
+        font-size: 20px;
+    }
+    .user-devise-block__textfield {
+        border: none;
+        border-radius: 6px;
+        height: 40px;
+        width: 350px;
+        margin-bottom: 10px;
+        font-size: 20px;
+    }
+    .user-devise-block__submit {
+        border-radius: 25px;
+        height: 40px;
+        width: 300px;
+        border: none;
+        display: block;
+        margin: 15px auto;
+        font-size: 20px;
+        line-height: 40px;
+    }
+    .user-davise__link {
+        display: block;
+        text-align: center;
+    }
+}
+
+@media(max-width: 700px) {
+    .user-Search {
+        width: auto;
+        .user-Search__ul {
+            width: 90%;
+        }
+        .avatar-img {
+            width: 30px;
+            height: 30px;
+            margin: 10px 10px 0px 0px;
+        }
+        .pagination {
+            font-size: 12px;
+        }
+        .pagination li a {
+            height: 41px;
+            width: 35px;
+            font-size: 12px;
+            text-align: center;
+            padding: 0;
+            line-height: 20px;
+        }
+    }
+    .userShow-block {
+        width: 96%;
+        .userShow-block__avatar {
+            width: 85px;
+            height: 85px;
+            padding: 0;
+            margin: 0px auto;
+        }
+        .userShow-block__leftsideBlock,
+        .userShow-block__rightsideBlock {
+            width: 50%;
+        }
+        .pagination {
+            font-size: 12px;
+        }
+        .pagination li a {
+            height: 41px;
+            width: 35px;
+            font-size: 12px;
+            text-align: center;
+            padding: 0;
+            line-height: 20px;
+        }
     }
 }
