--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,36 +1,38 @@
+<div class="user-devise-block">
 <h2>会員登録</h2>
 <% resource = User.new unless resource %>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
   
   <div class="field">
-    <%= f.label :Eメールアドレス %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= f.label :Eメールアドレス, class: "user-devise-block__label"  %>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "user-devise-block__textfield" %>
   </div>
 
   <div class="field">
-    <%= f.label :プレイヤーネーム %><br />
-    <%= f.text_field :name %>
+    <%= f.label :プレイヤーネーム, class: "user-devise-block__label"  %>
+    <%= f.text_field :name, class: "user-devise-block__textfield" %>
   </div>
 
   <div class="field">
-    <%= f.label :パスワード %>
+    <%= f.label :パスワード, class: "user-devise-block__label"  %>
     <% if @minimum_password_length %>
     <em>(半角英数<%= @minimum_password_length %> 文字以上)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+    <% end %>
+    <%= f.password_field :password, autocomplete: "new-password", class: "user-devise-block__textfield" %>
   </div>
 
   <div class="field">
-    <%= f.label :パスワード（確認用） %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    <%= f.label :パスワード（確認用）, class: "user-devise-block__label"  %>
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "user-devise-block__textfield" %>
   </div>
 
 
 
   <div class="actions">
-    <%= f.submit "送信" %>
+    <%= f.submit "送信", class: "user-devise-block__submit" %>
   </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+  </div>
