--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,9 +1,9 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "ログイン", new_session_path(resource_name) %><br />
+  <%= link_to "会員登録がお済みの方はこちらからログイン", new_session_path(resource_name), class: "user-davise__link" %><br />
 <% end %>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "会員登録", new_registration_path(resource_name) %><br />
+  <%= link_to "会員登録がまだの方はこちら", new_registration_path(resource_name), class: "user-davise__link" %><br />
 <% end %>
 
 <%#- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
